# notification-service

./: docker-compose.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: c467df2fac76_init.py
app/: main.py
app/applications/events/: models.py
app/core/: logging.py  logs.py  rabbit.py  session.py  settings.py
app/routers/: events.py
app/schemas/: event.py
app/services/: notification.py
app/services/messaging/: event_consumer.py  event_producer.py
app/services/rabbit/: event_consumer.py  event_producer
config/: logging.yaml
deploy/: Dockerfile
