[tool.taskipy.tasks]
worker = "python -m app.services.messaging.event_consumer"

[project]
name = "notification-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.5.5",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.13",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.9.1",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "taskipy>=1.14.1",
    "uvicorn>=0.34.3",
]
